// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: multi-select-option and cssVarScaling: var(--_p-multi-select-a, 1) 1`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 4px);
  padding-block: calc(
    11.2px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 4px
  );
  padding-inline: var(
      --_p-multi-select-option-b,
      calc(16.8px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 6px)
    )
    calc(16.8px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted,
.no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role="option"] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
  .no-results--disabled {
    color: GrayText;
  }
}
"
`;

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: multi-select-option and cssVarScaling: var(--_p-multi-select-a, 1) 2`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 4px);
  padding-block: calc(
    11.2px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 4px
  );
  padding-inline: var(
      --_p-multi-select-option-b,
      calc(16.8px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 6px)
    )
    calc(16.8px * (var(var(--_p-multi-select-a, 1)) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted,
.no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role="option"] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
  .no-results--disabled {
    color: GrayText;
  }
}
"
`;

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: select-option and cssVarScaling: var(--_p-select-a, 1) 1`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--_p-select-a, 1)) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(var(--_p-select-a, 1)) - 0.64285714) + 4px);
  padding-inline: var(
      --_p-select-option-b,
      calc(16.8px * (var(var(--_p-select-a, 1)) - 0.64285714) + 6px)
    )
    calc(16.8px * (var(var(--_p-select-a, 1)) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted,
.no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role="option"] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
  .no-results--disabled {
    color: GrayText;
  }
}
"
`;

exports[`getFunctionalComponentNoResultsOptionStyles() > should return correct css for componentName: select-option and cssVarScaling: var(--_p-select-a, 1) 2`] = `
".no-results {
  display: flex;
  gap: calc(11.2px * (var(var(--_p-select-a, 1)) - 0.64285714) + 4px);
  padding-block: calc(11.2px * (var(var(--_p-select-a, 1)) - 0.64285714) + 4px);
  padding-inline: var(
      --_p-select-option-b,
      calc(16.8px * (var(var(--_p-select-a, 1)) - 0.64285714) + 6px)
    )
    calc(16.8px * (var(var(--_p-select-a, 1)) - 0.64285714) + 6px);
  min-height: var(--p-leading-normal);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-contrast-medium);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: content-box;
  border-radius: var(--p-radius-sm);
  transition:
    background-color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.no-results--highlighted {
  background: var(--p-color-frosted);
}
.no-results--highlighted,
.no-results--selected {
  color: var(--p-color-primary);
}
.no-results--disabled {
  cursor: not-allowed;
}
.no-results--hidden {
  display: none;
}
.no-results[role="option"] {
  cursor: not-allowed;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
}
@media (forced-colors: active) {
  .no-results--highlighted {
    forced-color-adjust: none;
    outline: 2px solid Highlight;
    outline-offset: -2px;
  }
  .no-results--disabled {
    color: GrayText;
  }
}
"
`;
